Implement get transaction endpoint (#79)
* Intermediate commit

* Fix warnings

* Fix more warnings

* Fix more warnings

* Fix more warnings

* Intermediate commit

* Fixes

* Fix clippy

* Fix clippy

* Implement getTransaction

* Add missing snapshot files

* Fix warnings

* Update documentation
