# src/api/method/get_compressed_owner_token_balances.rs
@@ -58,9 +58,9 @@ pub async fn get_compressed_owner_token_balances(
 
     for token_account in token_accounts.value.items.iter() {
         let balance = mint_to_balance
-            .entry(token_account.mint.clone())
+            .entry(token_account.token_data.mint)
             .or_insert(0);
-        *balance += token_account.amount;
+        *balance += token_account.token_data.amount;
     }
     let token_balances: Vec<TokenBalance> = mint_to_balance
         .into_iter()
